--- a/APP/TIMER APP/index.html
+++ b/APP/TIMER APP/index.html
@@ -9,7 +9,11 @@
 
 <div class="timer">
 	<div class="circle"></div>
-	<div class="minutes"></div>
+	<div class="numbers">
+		<div class="hours"></div>
+		<div class="slash">:</div>
+		<div class="minutes"></div>
+	</div>
 </div>
 <script src="js/jquery-3.3.1.js"></script>
 <script src="js/propeller.min.js"></script>
